# blender-PixelOE

./: .gitignore  BRIEF.md  README.md  pyproject.toml  setup_upstream.sh
.github/workflows/: release.yml
blender_pixeloe/: __init__.py  blender_manifest.toml  image_io.py  operators.py  panels.py
blender_pixeloe/core/: __init__.py  color_match.py  colorspace.py  downscale_contrast.py  downscale_kcentroid.py  outline.py  pixelize.py  quantize.py  sliding.py
scripts/: build_addon.py  generate_readme_graphics.py
tests/harness/: _bench_blender_side.py  _stage_tracer.py  _upstream_runner.py  ablation_quant.json  ablation_quant.py  baseline.json  bench.py  bench_io.py  bench_resize.py  compare.py  compare_stage.py  regression.py
tests/images/: generate_synthetic.py
tests/unit/: test_image_io.py
