[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "blender-pixeloe"
version = "0.1.0"
description = "Blender addon wrapping the PixelOE pixelization algorithm by KohakuBlueleaf, ported to pure numpy."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [{ name = "Simon Sorkin", email = "simon.sorkin@outlook.com" }]
keywords = ["blender", "pixel-art", "image-processing", "pixeloe"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Multimedia :: Graphics",
]
dependencies = [
    "numpy>=1.24",
    # Pinned to the version Blender 5.1 ships with so the dev environment
    # mirrors the runtime PIL.Image.resize behavior; see the comment on
    # `_resize` in blender_pixeloe/core/pixelize.py.
    "Pillow==11.3.0",
    "scipy>=1.11",
]

[dependency-groups]
dev = [
    "pytest>=7.0",
    # build_addon.py shells out to `python -m pip download` to fetch scipy
    # wheels for each Blender platform/ABI; uv-managed venvs do not include
    # pip by default.
    "pip>=24.0",
]

[project.urls]
Upstream = "https://github.com/KohakuBlueleaf/PixelOE"

[tool.hatch.build.targets.wheel]
packages = ["blender_pixeloe"]
exclude = ["blender_pixeloe/wheels"]

[tool.pytest.ini_options]
testpaths = ["tests/unit"]
